<?xml version="1.0"?>
<package>
  <name>urgwc_node</name>
  <version>0.1.0</version>
  <description>urgwc_node</description>

  <maintainer email="guolindong@gmail.com">guolindong</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urg_node</url>
  <url type="bugtracker">https://github.com/ros-drivers/urg_node/issues</url>
  <url type="repository">https://github.com/ros-drivers/urg_node</url>
  <author email="chadrockey@gmail.com">Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urg_c</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_proc</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urg_c</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_proc</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <build_depend>mrpt</build_depend>
  <run_depend>mrpt</run_depend>
  
  <export>
  </export>
</package>
